# NeonZIP

./: CMakeLists.txt  README.md  game  package-lock.json  pubspec.yaml
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/data/: custom_levels.dart
lib/models/: app_theme.dart  board.dart  challenge.dart  difficulty.dart  game_config.dart  grid_pos.dart  player_path.dart  puzzle_data.dart  store_item.dart  tile.dart
lib/screens/: challenges_screen.dart  gameplay_screen.dart  level_select_screen.dart  loading_screen.dart  main_menu_screen.dart  main_shell.dart  path_selection_screen.dart  profile_screen.dart  store_screen.dart
lib/services/: game_state_manager.dart  level_generator.dart  level_manager.dart  player_progress_service.dart  procedural_audio_engine.dart  puzzle_generator.dart  settings_service.dart
lib/widgets/: ambient_background.dart  bottom_nav_item.dart  bouncing_button.dart  game_board_widget.dart  glassmorphism_card.dart  level_complete_overlay.dart  lose_overlay.dart  mascot_widget.dart  particle_layer.dart  path_painter.dart  rate_us_modal.dart  tile_widget.dart  (+2 more)
linux/: CMakeLists.txt
scratch/: test_parser.dart
scripts/: gen.dart
src/: Board.cpp  Board.h  Engine.cpp  Engine.h  GameManager.cpp  GameManager.h  LevelExporter.cpp  LevelExporter.h  LevelManager.cpp  LevelManager.h  Path.h  PuzzleGenerator.cpp  PuzzleGenerator.h  Renderer.cpp  Renderer.h  Solver.cpp  Solver.h  VFX.cpp  VFX.h  main.cpp
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+22 files in other folders)
